--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,5 @@
 [package]
-name = "halo2-scaffold"
-version = "0.2.0"
-edition = "2021"
+name = "zk_fixed_point_chip"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
